Add IMC and body fat percentage calculator; implement HTML structure, CSS styling, and JavaScript functionality

--- a/mod02Log/logProg/style.css
+++ b/mod02Log/logProg/style.css
@@ -27,7 +27,11 @@ body{
     justify-content: space-between;
     
 }
-
+.botoes{
+    display:flex;
+    gap:10px;
+    justify-content:center;
+}
 form input, form label, form button {
     display: block;
     width: 100%;
